--- a/welcome/style.css
+++ b/welcome/style.css
@@ -8,12 +8,12 @@
 */
 body {
     -webkit-font-smoothing: antialiased;
-    font: normal .8764em/1.5em "Helvetica Neue",Verdana,sans-serif;
+    font: normal .8764em/1.5em sans-serif;
     margin: 0;
 }
 
 html>body {
-    font-size: 16px;
+    font-size: 18px;
 }
 
 body {
@@ -23,7 +23,7 @@ body {
   line-height: 1.45;
   color: #333;
   max-width: 920px;
-  padding: 60px;
+  padding: 0 0 50px 0;
   margin: auto;
   margin-top: 0px;
 }
@@ -55,34 +55,35 @@ ul {
     font-size: 1.1429em;
 }
 
-ol li, li li {
+ul li, ol li, li li, ul li ul {
     font-size: 100%;
+    line-height: 1.6125em;
 }
 
 li p {
+    font-size: 100%;
     margin: .5em 0;
 }
 
 
 body,p,td,div {
-    color: #111;
-    font-family: "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif;
+    color: #333;
     word-wrap: break-word;
 }
 
 
-a {
+a, a:visited {
     -webkit-transition: color .2s ease-in-out;
     -moz-transition: color .2s ease-in-out;
     -o-transition: color .2s ease-in-out;
     -ms-transition: color .2s ease-in-out;
     transition: color .2s ease-in-out;
-    color: #0d6ea1;
-    text-decoration: none;
+    text-decoration-line: none;
+    color: #ef5b43;
 }
 
 a:hover {
-    color: #3593d9;
+    color: #fca700;
 }
 
 .footnote {
@@ -248,7 +249,7 @@ sub {
 
 p,h5 {
     font-size: 1.1429em;
-    line-height: 1.3125em;
+    line-height: 1.6125em;
     margin: 1.3125em 0;
 }
 
@@ -351,28 +352,30 @@ table tr:nth-child(even) {
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #fff;
   margin-bottom: 40px;
 }
 
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #ddd;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 16px 14px 0;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 1.1429em;
+  border: none;
+  background-color: white;
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+    color: #ef5b43;
+    background-color: white;
 }
 
 .topnav a.active {
-  background-color:  rgba(157, 193, 200,.5);
-  color: white;
+  background-color:  #fff;
+  color: #333;
 }
 
 .topnav .icon {
@@ -384,6 +387,7 @@ table tr:nth-child(even) {
   .topnav a.icon {
     float: right;
     display: block;
+    color: #ef5b43;
   }
 }
 
