OK, a bit of left and right padding won't hurt

--- a/welcome/style.css
+++ b/welcome/style.css
@@ -23,7 +23,7 @@ body {
   line-height: 1.45;
   color: #333;
   max-width: 920px;
-  padding: 0 0 50px 0;
+  padding: 0 10px 50px 10px;
   margin: auto;
   margin-top: 0px;
 }
